refactor(java): remove deprecated call